--- a/template.yaml
+++ b/template.yaml
@@ -7,48 +7,36 @@ det_loc:
 keys:
   right: '@#EWEA'
   left: 'F#CTCFC'
+  
 remarks:
-  - Direction of a toponym in the form of an arrow
-  - Information_Board_Bus_Shelter_Ahead_M
-  - Information_Board_Going_Straight_M
-  - Information_Board_Parking_Brown_M
-  - Information_Board_School_Ahead_M
-  - Information_Board_Street_Name_Blue_M
-  - Information_Board_Street_Name_Green_M
-  - Information_Parking_for_Disable_M
-  - Mandatory passage from the left side of the island
-  - Mandatory passage from the right or left side of the island
-  - Mandatory passage from the right side of the island
-  - Caution_Bidirectional_Traffic_M
-  - Caution_Board_Compulsory yielding of priority
-  - Caution_Board_Crosswalk_Blue_M
-  - Caution_Board_Crosswalk_Yellow_M
-  - Caution_Board_Main_Road_M
-  - Caution_Board_School_Ahead_M
-  - Caution_Board_Trams_M
-  - Caution_Speed_Bumps_M
-  - Compulsory direction of movement to the LEFT_M
-  - Compulsory direction of movement to the right
-  - Compulsory passage from the right or from the left side of the island
-  - Compulsory passage only from the left side of the island
-  - Compulsory passage only from the right side of the island
-  - Compulsory_stop
-  - Mandatory circular route
-  - Mandatory_Board_Going_Straight_M
-  - Maximum speed limit
-  - No entry for all vehicles
-  - No Left Turn_M
-  - No Right Turn_M
-  - No Stopping_M
-  - No U_Turn Right_M
-  - No U-Turn Left_M
-  - Additional Infornmation Board
-  - Additional Caution Board
-  - Additional Mandatory Board
+  default:
+  
 comment:
-  - Longitudinal Crack
-  - Raveling Crack
-  - Alligator Crack
-  - Transverse Crack
-  - Patching
-  - Pothole
+  Cracks:
+    - Alligator Crack
+    - Transverse Crack
+  default:
+    - Longitudinal Crack
+    - Raveling Crack
+    - Alligator Crack
+    - Transverse Crack
+    - Patching
+    - Pothole
+  Signboard_Mandatory_Board:
+    - Round red and white
+    - Round red and blue
+    - Round white & blue
+  Signboard_Mandatory_Board_STOP:
+    - Hexagone red and white
+  Signboard_Caution_Board:
+    - Triangle Red and white
+    - Upside down triangle red and white
+    - Triangle red and yellow
+  Signboard_Information_Board:
+    - Rectangular
+  Road_Markings:
+    - Left
+    - Right
+    - Straight
+  Signboard_Hazard_Board:
+    - Rectangular_Hazard
